# xonix-coding-game

./: .gitignore  Cargo.toml  LICENSE  README.md
analysis/: best-matches.ipynb  docker_jupyter.sh  showterm.sh
src/: lib.rs  main.rs  model.rs  test.rs  utils.rs
src/bot/: bot1.rs  bot2.rs  common.rs  killer_bot.rs  mod.rs  random_bot.rs  test_bot.rs
tests/: game.rs  model.rs  path_find.rs  pathfind.rs  test_bot.rs  test_game.rs  tests.rs  utils.rs
